--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -2,28 +2,32 @@ if(POLICY CMP0020)
     CMAKE_POLICY(SET CMP0020 NEW)
 endif()
 
-SET(
-    CharmCore_SRCS
-    CharmConstants.cpp
-    CharmExceptions.cpp
-    Controller.cpp
-    Dates.cpp
-    SqlRaiiTransactor.cpp
-    SqLiteStorage.cpp
-    MySqlStorage.cpp
-    Configuration.cpp
-    SqlStorage.cpp
-    Event.cpp
-    Task.cpp
-    TaskListMerger.cpp
-    State.cpp
-    CharmDataModel.cpp
-    TaskTreeItem.cpp
-    TimeSpans.cpp
-    CharmCommand.cpp
-    SmartNameCache.cpp
-    XmlSerialization.cpp
-)
+#SET(
+#    CharmCore_SRCS
+#    CharmConstants.cpp
+#    CharmExceptions.cpp
+#    Controller.cpp
+#    Dates.cpp
+#    SqlRaiiTransactor.cpp
+#    SqLiteStorage.cpp
+#    MySqlStorage.cpp
+#    Configuration.cpp
+#    SqlStorage.cpp
+#    Event.cpp
+#    Task.cpp
+#    TaskListMerger.cpp
+#    State.cpp
+#    CharmDataModel.cpp
+#    TaskTreeItem.cpp
+#    TimeSpans.cpp
+#    CharmCommand.cpp
+#    SmartNameCache.cpp
+#    XmlSerialization.cpp
+#)
+
+include(CMakeLists_Files.txt)
+SET(CharmCore_SRCS ${SOURCES})
+
 
 ADD_LIBRARY( CharmCore STATIC ${CharmCore_SRCS} )
 
